# adget

./: Cargo.toml  README.md
scripts/: deploy.sh  undeploy.sh
src/: adget.rs  adgetd.rs  adgetm.rs  main.rs  utils.rs
