[package]
name = "adget"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
humansize = "2.1.3"
confy = "0.6.0"
